<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JW</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_index">首页</string>

    <!-- IndexActivity -->
    <array name="tab_title">
        <item>课程表</item>
        <item>成绩单</item>
        <item>待定1</item>
        <item>待定2</item>
    </array>
    <array name="drawer_menu_item_title">
        <item>我的信息</item>
        <item>待定1</item>
        <item>待定2</item>
        <item>待定3</item>
    </array>

    <string name="drawer_open">菜单</string>
    <string name="drawer_close">首页</string>

    <!-- LoginActivity -->
    <string name="title_activity_login">登录</string>
    <string name="account">学号</string>
    <string name="password">密码</string>
    <string name="jw_password">教务密码</string>
    <string name="app_password">客户端密码</string>
    <string name="login">登录</string>
    <string name="register">第一次登录</string>
    <string name="save_password">记住密码</string>

    <!-- RegisterFragment -->
    <string name="captcha">验证码</string>
    <string name="refresh_captcha">刷新</string>

    <!-- server -->
    <!--<string name="URL">http://192.168.41.57:8000</string>-->
    <string name="URL">http://10.1.56.17:8000</string>

    <!--error-->

    <string name="account_null">学号不能为空</string>
    <string name="jw_password_null">教务密码不能为空</string>
    <string name="client_password_null">客户端密码不能为空</string>
    <string name="captcha_null">验证码不能为空</string>

    <string name="account_error">学号不存在</string>
    <string name="jw_password_error">教务密码错误</string>
    <string name="client_password_error">客户端帐号或密码错误</string>
    <string name="captcha_error">验证码错误</string>

    <string name="account_exists">学号已经注册</string>
    <string name="account_active">帐号已经被禁用</string>


</resources>
